[package]
name = "blockchain_rust"
version = "0.1.0"
edition = "2021"
authors = ["Miquel A. Cabot <miquel@cabot.dev>"]

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.8", features = ["derive"] }
data-encoding = "2.6.0"
num-bigint = "0.4.6"
ring = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
sled = "0.34.7"
uuid = "1.9.1"
