[package]
name = "blockchain_rust"
version = "0.1.0"
edition = "2021"
authors = ["Miquel A. Cabot <miquel@cabot.dev>"]

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.8", features = ["derive"] }
data-encoding = "2.6.0"
log = "0.4.22"
num-bigint = "0.4.6"
once_cell = "1.19.0"
ring = "0.17.8"
rust-crypto = "0.2.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sled = "0.34.7"
uuid = { version = "1.9.1", features = ["v4"] }
